--- a/draft-rswg-rfc7990-updates.mkd
+++ b/draft-rswg-rfc7990-updates.mkd
@@ -1,5 +1,5 @@
 ---
-title: RFC Format Framework
+title: Updated RFC Format Framework
 abbrev: Format Framework
 docname: draft-rswg-rfc7990-updates-00
 
@@ -58,6 +58,9 @@ This document also specifies that older versions of the XML file for an RFC are 
 
 This document explicitly does not update the other documents referenced in {{RFC7990}}.
 
+\[\[ Jay Daley would like to use RFCXML not just XML as we are describing a very specific XML language that is used. \]\]
+
+
 
 # Updated Definition of "Canonical Format" and "Archive"
 
@@ -71,6 +74,8 @@ The definition of "canonical format" in Section 3 of {{RFC7990}} is updated to b
 > Canonical format: the authorized, recognized, accepted, and
 most recent version of the document published by the RFC Editor
 
+\[\[ Another option: the XML document published by the RFC Editor in the most recent version of the XML format \]\]
+
 Section 5 of {{RFC7990}} says:
 
 > The final XML file produced by the RFC Editor will be considered the
@@ -79,47 +84,39 @@ holds all the information intended for an RFC.
 
 This wording does not take into account the need to later change the XML file to fix XML errors.
 XML format errors, and better design choices, have been discovered by the community since the first RFCs were published using the XML format.
-In order to allow the RFC Editor to publish correct XML for all RFCs, Section 5 of {{RFC7990}} is updated to say:
+In order to allow the RFC Editor to publish corrected XML for all RFCs, Section 5 of {{RFC7990}} is updated to say:
 
-> The XML file produced by the RFC Editor will be considered the
-canonical format for RFCs; it is the lowest common denominator that
-holds all the information intended for an RFC. The RFC Editor may
-change the file over time to incorporate changes in the XML format.
-
-<!--
-The XML file produced by the RFC Editor is the canonical format for RFCs; it is the format that holds all the information intended for an RFC.
+> The XML file produced by the RFC Editor is the canonical format for RFCs; it is the format that holds all the information intended for an RFC.
 The RFC Editor may change the file over time to incorporate changes in the definition of the XML format.
--->
 
-> The RFC Editor must keep archived sets of all versions of the
-XML file for an RFC and the published publication formats (HTML, PDF,
-and plain text) that were published.
-These archived sets must be available using the same access methods
-as for the canonical XML and the published publication formats.
+> The RFC Editor must keep archived sets of all renderings of the XML file for an RFC and the derived publication formats (HTML, PDF, and plain text) that were published.
+These archived sets must be available using the same access methods as for the XML and the published publication formats.
 
-## Reasons for Updating the Canonical XML Files
+## Reasons for Updating the XML Files
 
-The canonical XML file can be updated for the following reasons:
+The XML file can be updated for the following reasons:
 
 - The XML vocabulary, originally defined in {{RFC7991}}, changes
-- An error is discovered in the XML for an RFC
+- An error is discovered in the format XML for an RFC (not the content)
 
-During the development of this document, many other reasons for updating the canonical XML file were suggested.
+During the development of this document, many other reasons for updating the XML file were suggested.
 Those reasons are not in scope for this document, and may be adopted later after the community has experience with the updating mechanisms described in this document.
 
 
 # Updating Publication Format Documents
 
-Seciton 7 of {{RFC7990}} describes the HTML, PDF, and plain text versions of an RFC that are published by the RFC Editor.
+Section 7 of {{RFC7990}} describes the HTML, PDF, and plain text versions of an RFC that are published by the RFC Editor.
 The section is titled "Publication Format Documents", so that term is used here to refer to the documents that are derived from the XML for an RFC.
-When the canonical XML changes, the RFC Editor will also regenerate the publication format documents and publish those new versions.
-
-The RFC Editor might also regenerate one or more of the publication format documents for an RFC if it sees errors in the generated output.
-This has already happened in cases where PDF files had display errors in them.
+When the XML changes, the RFC Editor may also regenerate the publication format documents and publish those new versions.
 
 Whenever the RFC Editor publishes regenerated publication format documents, it must keep archived sets of all versions of the publication format documents files.
-These archived sets must be available using the same access methods as for the canonical XML and the published publication formats.
-<!-- Martin T doesn't like this. -->
+These archived sets must be available using the same access methods as for the XML and the published publication formats.
+
+\[\[ There was disagreement about the paragraph above about "must" and deciding when the publication format files are archived. \]\]
+
+(Separately, the RFC Editor might also regenerate one or more of the publication format documents for an RFC if it sees errors in the generated output.
+This has already happened in cases where PDF files had display errors in them.
+Such regeneration is an operational decision that is not affected by this document.)
 
 
 # Archived Documents
@@ -129,15 +126,19 @@ When the RFC Editor archives documents, it does so in a manner that allows them 
 To make the files easier to find, they should be stored in the same Internet-accessible locations as the current RFCs.
 The methods for storage and access will be determined by the RFC Editor in consultation with the technical community.
 
+The naming of the archival files is a topic perfect for bike-shedding by IETF participants.
+Before this document is finished, hundreds (or thousands!) of messages, many with firm opinions of the best naming method, will be published.
+Heck, even the name of the directory for archival files is fodder for vigorous bike-shedding.
+
 ## An Initial Proposal for File Naming
 
-The file names for archived documents will be appended with a datestamp indicating the last day that the file was published as the canonical XML or publication format documents.
+The file names for archived documents will be appended with a datestamp indicating the last day that the file was published as the XML or publication format documents.
 For example, if the XML for RFC 8888 is updated on March 4, 2024, the RFC Editor will publish the updated files as rfc8888.xml, rfc8888.html, rfc8888.pdf, and rfc8888.txt in the normal locations.
-It will also publish in the archival directory the files rfc8888-2024-03-04.xml, rfc8888-2024-03-04.html, rfc8888-2024-03-04.pdf, and rfc8888-2024-03-04.txt.
+It will also publish the files rfc8888-2024-03-04.xml, rfc8888-2024-03-04.html, rfc8888-2024-03-04.pdf, and rfc8888-2024-03-04.txt.
 
 The same naming scheme is used when just a publication format document is published.
 For example, if the PDF of RFC 9432 had rendering issues that the RFC Editor fixes on January 8, 2024, the RFC Editor will publish tne updated file as rfc9432.pdf.
-It will also publish in the archival directory the file rfc9432-2023-01-08.pdf.
+It will also publish the file rfc9432-2023-01-08.pdf.
 
 ## Explaining Reasons for Updating Files
 
@@ -172,7 +173,10 @@ Unintended changes to text could in turn corrupt a standard, practice, or critic
 
 This document has greatly benefitted from the input or the RSWG.
 In particular,
-Martin Thomson
+Brian Carpenter,
+Jay Daley,
+and Martin Thomson
 gave significant input on the early draft of this document.
 
 --- back
+
