--- a/draft-rswg-rfc7990-updates.mkd
+++ b/draft-rswg-rfc7990-updates.mkd
@@ -160,24 +160,8 @@ Those reasons are not in scope for this document, and may be adopted later after
 # Archived Documents
 
 When the RFC Editor archives documents, it does so in a manner that allows them to be found by people who want the historical (as compared to current) versions of those files.
-
-To make the files easier to find, they should be stored in the same Internet-accessible locations as the current RFCs.
+This document does not specify how archives are maintained or how archived RFC XML might be located or identified.
 The methods for storage and access will be determined by the RFC Editor in consultation with the technical community.
-
-The naming of the archival files is a topic perfect for bike-shedding by IETF participants.
-Before this document is finished, hundreds (or thousands!) of messages, many with firm opinions of the best naming method, might be published.
-Heck, even the name of the directory for archival files is fodder for vigorous bike-shedding.
-
-## An Initial Proposal for File Naming
-
-The file names for archived documents will be appended with a datestamp indicating the last day that the file was published as the XML or publication format documents.
-For example, if the XML for RFC 8888 is updated on March 4, 2024, the RFC Editor will publish the updated files as rfc8888.xml, rfc8888.html, rfc8888.pdf, and rfc8888.txt in the normal locations.
-It will also publish the files rfc8888-2024-03-04.xml, rfc8888-2024-03-04.html, rfc8888-2024-03-04.pdf, and rfc8888-2024-03-04.txt.
-
-The same naming scheme is used when just a publication format document is published.
-For example, if the PDF of RFC 9432 had rendering issues that the RFC Editor fixes on January 8, 2024, the RFC Editor will publish tne updated file as rfc9432.pdf.
-It will also publish the file rfc9432-2023-01-08.pdf.
-
 
 # IANA Considerations
 
