Ask whether the policy should be set now or later.

--- a/draft-rswg-rfc7990-updates.mkd
+++ b/draft-rswg-rfc7990-updates.mkd
@@ -153,6 +153,11 @@ Existing RFCs can be updated to use the new format.
 The RFC that describes format changes can also describe how the XML of existing RFCs will be updated.
 The intent behind limiting changes to syntax and XML errors is that the goal is to preserve the semantic meaning encoded in the RFC XML document.
 
+\[\[\[
+The above sets a new policy.
+Another option is to say that the policy will be set later.
+\]\]\]
+
 During the development of this document, many other reasons for updating the XML file were suggested.
 Those reasons are not in scope for this document, and may be adopted later after the community has experience with the updating mechanisms described in this document.
 
